FIND_PACKAGE( G15Tools REQUIRED )
FIND_PACKAGE( LibDaemon REQUIRED )
# FIND_PACKAGE( Qt4 REQUIRED )
FIND_PACKAGE( DBUS REQUIRED )
INCLUDE_DIRECTORIES(${DBUS_INCLUDES}
# 					${QT_INCLUDES}
					${GLIB2_INCLUDES}
# 					${DBUS_QT4_INCLUDE_DIR}
					${CMAKE_CURRENT_BINARY_DIR}
					${CMAKE_CURRENT_SOURCE_DIR}
					${LIBDAEMON_INCLUDE_DIR}
					${G15TOOLS_INCLUDES} )
SET( SRC logitechdaemon.c main.c )
SET( DBUSXML logitechdaemon.xml )
# SET( QDBUSXML daemon.xml )
# QT4_WRAP_DBUSXML_ADAPTOR( QDBUSSRC LogitechDaemonAdaptor ${QDBUSXML} )
# QT4_AUTOMOC( ${SRC} ${QDBUSSRC} )
ADD_EXECUTABLE( logitechdaemon ${SRC} ${DBUSSRC} )
# ADD_DEFINITIONS( ${QT_DEFINITIONS} )
TARGET_LINK_LIBRARIES( logitechdaemon
# 					${QT_LIBRARIES}
					${DBUS_GLIB_LIBRARY}
					${DBUS_LIBRARY}
# 					${DBUS_QT4_LIBRARY}
					${LIBDAEMON_LIBRARY}
					${G15TOOLS_LIBRARY} )
INSTALL( PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/logitech-daemon DESTINATION /etc/rc.d )
INSTALL( PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/logitech-daemon.conf DESTINATION /etc/dbus-1/system.d )
INSTALL( TARGETS logitechdaemon RUNTIME DESTINATION /usr/bin )
