FIND_PACKAGE( G15Tools REQUIRED )
FIND_PACKAGE( LibDaemon REQUIRED )
FIND_PACKAGE( DBUS REQUIRED )
FIND_PACKAGE( GLIB2 REQUIRED )
INCLUDE_DIRECTORIES(${DBUS_INCLUDES}
					${DBUS_GLIB_INCLUDE_DIR}
					${GLIB2_INCLUDE_DIR}
					${CMAKE_CURRENT_BINARY_DIR}
					${CMAKE_CURRENT_SOURCE_DIR}
					${LIBDAEMON_INCLUDE_DIR}
					${G15TOOLS_INCLUDES}
					gthread-2.0 )
SET( SRC logitechdaemon.c main.c )
SET( DBUSXML logitech_daemon.xml )
GLIB_BIND_XML_SERVER( DBUSSRC logitech_daemon ${DBUSXML} )
ADD_EXECUTABLE( logitechdaemon ${SRC} ${DBUSSRC} )

TARGET_LINK_LIBRARIES( logitechdaemon
					gthread-2.0
					${DBUS_GLIB_LIBRARY}
					${DBUS_LIBRARY}
					${GLIB2_LIBRARIES}
					${LIBDAEMON_LIBRARY}
					${G15TOOLS_LIBRARY} )

INSTALL( PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/logitech-daemon DESTINATION /etc/rc.d )
INSTALL( PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/logitech-daemon.conf DESTINATION /etc/dbus-1/system.d )
INSTALL( TARGETS logitechdaemon RUNTIME DESTINATION /usr/bin )
INSTALL( FILES org.freedesktop.LogitechDaemon.service DESTINATION /usr/share/dbus-1/services )
