IF( COMPILE_C_VERSION )
	SET( COMPILE_CPP_VERSION FALSE )
	SET( COMPILE_C_VERSION TRUE )
ELSE( COMPILE_C_VERSION )
	SET( COMPILE_CPP_VERSION TRUE )
	SET( COMPILE_C_VERSION FALSE )
ENDIF( COMPILE_C_VERSION )

FIND_PACKAGE( G15Tools REQUIRED )
FIND_PACKAGE( LibDaemon REQUIRED )
FIND_PACKAGE( DBUS REQUIRED )

IF( COMPILE_C_VERSION )
	FIND_PACKAGE( GLIB2 REQUIRED )
	INCLUDE_DIRECTORIES(${DBUS_INCLUDES}
						${DBUS_GLIB_INCLUDE_DIR}
						${GLIB2_INCLUDE_DIR}
						${CMAKE_CURRENT_BINARY_DIR}
						${CMAKE_CURRENT_SOURCE_DIR}
						${LIBDAEMON_INCLUDE_DIR}
						${G15TOOLS_INCLUDES}
						gthread-2.0 )
	SET( SRC logitechdaemon.c main.c )
	SET( DBUSXML logitech_daemon.xml )
	GLIB_BIND_XML_SERVER( DBUSSRC logitech_daemon ${DBUSXML} )
	ADD_EXECUTABLE( logitechdaemon ${SRC} ${DBUSSRC} )
ENDIF( COMPILE_C_VERSION )

IF( COMPILE_CPP_VERSION )
	FIND_PACKAGE( Qt4 REQUIRED )
	INCLUDE_DIRECTORIES(${DBUS_INCLUDES}
						${QT_INCLUDES}
						${QT_QTDBUS_INCLUDE_DIR}
						${CMAKE_CURRENT_BINARY_DIR}
						${CMAKE_CURRENT_SOURCE_DIR}
						${LIBDAEMON_INCLUDE_DIR}
						${G15TOOLS_INCLUDES} )
	SET( SRC main.cpp dbusthread.cpp dbusobject.cpp )
	SET( DBUSXML DBusObject.xml )
	QT4_ADD_DBUS_ADAPTOR( DBUSSRC ${DBUSXML} dbusobject.h DBusObject )
	QT4_AUTOMOC( ${SRC} )
	ADD_EXECUTABLE( logitechdaemon ${SRC} ${DBUSSRC} )
ENDIF( COMPILE_CPP_VERSION )

IF( COMPILE_C_VERSION )
	TARGET_LINK_LIBRARIES( logitechdaemon
						gthread-2.0
						${DBUS_GLIB_LIBRARY}
						${DBUS_LIBRARY}
						${GLIB2_LIBRARIES}
						${LIBDAEMON_LIBRARY}
						${G15TOOLS_LIBRARY} )
ENDIF( COMPILE_C_VERSION )

IF( COMPILE_CPP_VERSION )
	TARGET_LINK_LIBRARIES( logitechdaemon
						${QT_LIBRARIES}
						${QT_QTDBUS_LIBRARY}
						${DBUS_LIBRARY}
						${LIBDAEMON_LIBRARY}
						${G15TOOLS_LIBRARY} )
ENDIF( COMPILE_CPP_VERSION )

INSTALL( PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/logitech-daemon DESTINATION /etc/rc.d )
INSTALL( PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/logitech-daemon.conf DESTINATION /etc/dbus-1/system.d )
INSTALL( TARGETS logitechdaemon RUNTIME DESTINATION /usr/bin )
INSTALL( FILES logitechdaemon.service DESTINATION /usr/share/dbus-1/services )
